@@ -1,3 +1,7 @@
+2015-10-13 Christopher Thielen <cmthielen@ucdavis.edu>:
+  * Ignore messages sent by self
+  * Fix for using two types of SysAid ticket number identification
+
 2015-09-24 Christopher Thielen <cmthielen@ucdavis.edu>:
   * LDAP queries with multiple words but no known commands now
     perform a CN=*term1*term2* -style search
